Update game implementation and release assets