@@ -22,25 +22,41 @@ final class VehicleDamageVisual extends AbstractControl {
     static final int STAGES=5;static final float MAX_DENT=.35f,DAMAGE_SECONDS=.12f,REPAIR_SECONDS=.30f;
     private static final List<String> PANELS=List.of("panel-door-left","panel-door-right","panel-hood","panel-trunk");
     private static final class Part {
-        final VehicleModelData.Part source;final Geometry geometry;final int lod;
-        final float[] base,from,to;final MorphTarget previous=new MorphTarget("previous"),next=new MorphTarget("next");
-        final List<Geometry> overlays=new ArrayList<>();
+        final VehicleModelData.Part source;final Geometry geometry,canonical;final int lod;
+        final float[] base,from,to,fromNormal,toNormal,fromTangent,toTangent;
+        final boolean deforms;final MorphTarget previous=new MorphTarget("previous"),next=new MorphTarget("next");
+        final FloatBuffer[] previousBuffers=new FloatBuffer[3],nextBuffers=new FloatBuffer[3];
+        final List<Geometry> overlays=new ArrayList<>();final BitSet dirtyTriangles=new BitSet();
+        float elapsed=1,duration=DAMAGE_SECONDS;int composedStage=-1;final float[] composedRegions=new float[8];
         Part(VehicleModelData.Part source,Geometry geometry,int lod) {
             this.source=source;this.geometry=geometry;this.lod=lod;base=positions(source.stages()[0]);from=base.clone();to=base.clone();
-            Mesh mesh=source.stages()[0].clone();mesh.addMorphTarget(previous);mesh.addMorphTarget(next);geometry.setMesh(mesh);
-            for(MorphTarget target:List.of(previous,next))for(var kind:List.of(VertexBuffer.Type.Position,VertexBuffer.Type.Normal,VertexBuffer.Type.Tangent))target.setBuffer(kind,BufferUtils.createFloatBuffer(new float[base.length]));
-            // jME initializes MorphWeights and shader buffer counts on its first real render.
-            // Pre-setting NbSimultaneousGPUMorph skips that initialization in jME 3.8.1.
-            geometry.setMorphState(new float[]{1,0});
+            fromNormal=read3(source.stages()[0],VertexBuffer.Type.Normal);toNormal=fromNormal.clone();fromTangent=read3(source.stages()[0],VertexBuffer.Type.Tangent);toTangent=fromTangent.clone();
+            deforms=Arrays.stream(source.regions()).anyMatch(r->r.indices().length>0);
+            Mesh mesh=source.stages()[0].clone();geometry.setMesh(mesh);
+            if(deforms){mesh.addMorphTarget(previous);mesh.addMorphTarget(next);
+                VertexBuffer.Type[] types={VertexBuffer.Type.Position,VertexBuffer.Type.Normal,VertexBuffer.Type.Tangent};
+                for(int i=0;i<3;i++){previousBuffers[i]=BufferUtils.createFloatBuffer(base.length);nextBuffers[i]=BufferUtils.createFloatBuffer(base.length);previous.setBuffer(types[i],previousBuffers[i]);next.setBuffer(types[i],nextBuffers[i]);}
+                // The initial identity targets are already settled, matching elapsed >= duration.
+                geometry.setMorphState(new float[]{0,1});
+            }
             if(source.name().equals("headlights")||source.name().equals("taillights")){float[] colors=new float[base.length/3*4];Arrays.fill(colors,1);mesh.setBuffer(VertexBuffer.Type.Color,4,colors);}
-            BoundingBox bound=(BoundingBox)source.stages()[0].getBound().clone();bound.setXExtent(bound.getXExtent()+MAX_DENT);bound.setYExtent(bound.getYExtent()+MAX_DENT);bound.setZExtent(bound.getZExtent()+MAX_DENT);mesh.setBound(bound);
+            BoundingBox bound=(BoundingBox)source.stages()[0].getBound().clone();if(deforms){bound.setXExtent(bound.getXExtent()+MAX_DENT);bound.setYExtent(bound.getYExtent()+MAX_DENT);bound.setZExtent(bound.getZExtent()+MAX_DENT);}mesh.setBound(bound);
+            canonical=lod==0?new Geometry(source.name(),source.stages()[0]):null;if(canonical!=null){canonical.updateGeometricState();source.stages()[0].createCollisionData();}
         }
-        void targets(){target(previous,from);target(next,to);geometry.setDirtyMorph(true);}
-        private void target(MorphTarget target,float[] point) {
-            float[] delta=new float[point.length];for(int i=0;i<delta.length;i++)delta[i]=point[i]-base[i];target.setBuffer(VertexBuffer.Type.Position,BufferUtils.createFloatBuffer(delta));
-            float[] n=normals(point);FloatBuffer original=source.stages()[0].getFloatBuffer(VertexBuffer.Type.Normal);float[] dn=n.clone();for(int i=0;i<dn.length;i++)dn[i]-=original.get(i);target.setBuffer(VertexBuffer.Type.Normal,BufferUtils.createFloatBuffer(dn));
-            Mesh posed=new Mesh();posed.setBuffer(VertexBuffer.Type.Position,3,point);posed.setBuffer(VertexBuffer.Type.Normal,3,n);posed.setBuffer(source.stages()[0].getBuffer(VertexBuffer.Type.TexCoord));com.jme3.util.mikktspace.MikktspaceTangentGenerator.generate(posed);
-            FloatBuffer tangent=posed.getFloatBuffer(VertexBuffer.Type.Tangent),baseTangent=source.stages()[0].getFloatBuffer(VertexBuffer.Type.Tangent);float[] dt=new float[point.length];for(int v=0;v<point.length/3;v++)for(int k=0;k<3;k++)dt[v*3+k]=tangent.get(v*4+k)-baseTangent.get(v*4+k);target.setBuffer(VertexBuffer.Type.Tangent,BufferUtils.createFloatBuffer(dt));
+        boolean needsCompose(int stage,float[] regions){if(!deforms)return false;if(composedStage!=stage)return true;for(int i=0;i<8;i++)if(composedRegions[i]!=regions[i]&&source.regions()[i].indices().length>0)return true;return false;}
+        void compose(int stage,float[] regions,float blend) {
+            float[] oldN=fromNormal,oldT=fromTangent;
+            for(int i=0;i<from.length;i++){from[i]+=(to[i]-from[i])*blend;oldN[i]+=(toNormal[i]-oldN[i])*blend;oldT[i]+=(toTangent[i]-oldT[i])*blend;}
+            Mesh pose=source.stages()[stage];copy3(pose,VertexBuffer.Type.Position,to);copy3(pose,VertexBuffer.Type.Normal,toNormal);copy3(pose,VertexBuffer.Type.Tangent,toTangent);dirtyTriangles.clear();
+            for(int region=0;region<8;region++)if(regions[region]>0){var d=source.regions()[region];for(int j=0;j<d.indices().length;j++){int vertex=d.indices()[j];dirtyTriangles.set(vertex/3);for(int k=0;k<3;k++)to[vertex*3+k]+=d.xyz()[j*3+k]*regions[region];}}
+            for(int i=0;i<to.length;i+=3){float x=to[i]-base[i],y=to[i+1]-base[i+1],z=to[i+2]-base[i+2],s=x*x+y*y+z*z;if(s>MAX_DENT*MAX_DENT){float r=MAX_DENT/(float)Math.sqrt(s);to[i]=base[i]+x*r;to[i+1]=base[i+1]+y*r;to[i+2]=base[i+2]+z*r;dirtyTriangles.set(i/9);}}
+            var uv=source.stages()[0].getFloatBuffer(VertexBuffer.Type.TexCoord);
+            for(int triangle=dirtyTriangles.nextSetBit(0);triangle>=0;triangle=dirtyTriangles.nextSetBit(triangle+1))basis(to,uv,triangle,toNormal,toTangent);
+            upload(previousBuffers,from,fromNormal,fromTangent);upload(nextBuffers,to,toNormal,toTangent);for(VertexBuffer vb:geometry.getMesh().getBufferList())if(vb.getBufferType().ordinal()>=VertexBuffer.Type.MorphTarget0.ordinal()&&vb.getBufferType().ordinal()<=VertexBuffer.Type.MorphTarget9.ordinal())vb.setUpdateNeeded();geometry.setDirtyMorph(true);composedStage=stage;System.arraycopy(regions,0,composedRegions,0,8);
+        }
+        private void upload(FloatBuffer[] buffers,float[] point,float[] normal,float[] tangent) {
+            var baseN=source.stages()[0].getFloatBuffer(VertexBuffer.Type.Normal);var baseT=source.stages()[0].getFloatBuffer(VertexBuffer.Type.Tangent);
+            for(int i=0;i<base.length;i++){buffers[0].put(i,point[i]-base[i]);buffers[1].put(i,normal[i]-baseN.get(i));buffers[2].put(i,tangent[i]-baseT.get(i/3*4+i%3));}
         }
     }
     private final Node root;private final VehicleProfile profile;private final VehicleDamageMarks marks;private final WeaponMountVisual mounts;
@@ -49,11 +65,14 @@ final class VehicleDamageVisual extends AbstractControl {
     private final Set<String> detached=new HashSet<>();private final List<VehicleVisual.DetachedPanel> pending=new ArrayList<>();private final LinkedHashSet<String> seen=new LinkedHashSet<>();
     private int stage,lod;private float elapsed=1,duration=DAMAGE_SECONDS,pendingDuration=-1,maximumHp=Float.NaN;private long repairRevision;
     private final float[] lampDamage=new float[2];
+    private final Vector3f[] silhouetteCorners=new Vector3f[8];private final Vector3f worldCorner=new Vector3f(),screenCorner=new Vector3f();
     private final List<Geometry> wheelGeometry=new ArrayList<>();private final List<Mesh[]> wheelLods=new ArrayList<>();
+    private final CollisionResults collisionResults=new CollisionResults();
+    private final LinkedHashMap<String,Anchor> contactAnchors=new LinkedHashMap<>();
     private record Anchor(Part part,int triangle,float a,float b,float c,Vector3f point,Vector3f normal,Vector2f uv) {}
-    static void install(AssetManager assets,Node root,VehicleProfile profile,int livery){root.addControl(new VehicleDamageVisual(assets,root,profile,livery));root.addControl(new MorphControl());}
+    static void install(AssetManager assets,Node root,VehicleProfile profile,int livery){root.addControl(new VehicleDamageVisual(assets,root,profile,livery));MorphControl morph=new MorphControl();morph.setApproximateTangents(false);root.addControl(morph);}
     private VehicleDamageVisual(AssetManager assets,Node root,VehicleProfile profile,int livery) {
-        this.root=root;this.profile=profile;marks=new VehicleDamageMarks(profile);mounts=new WeaponMountVisual(root);var model=VehicleModelData.load(assets,profile.id());
+        this.root=root;this.profile=profile;marks=new VehicleDamageMarks(assets,profile.id());mounts=new WeaponMountVisual(root);var model=VehicleModelData.load(assets,profile.id());
         for(int level=0;level<3;level++) {
             levels[level]=new Node("lod"+level);root.attachChild(levels[level]);frostLevels[level]=new Node("frost-lod"+level);shieldLevels[level]=new Node("shield-lod"+level);frost.attachChild(frostLevels[level]);shield.attachChild(shieldLevels[level]);
             for(var data:model.lods.get(level)) {
@@ -63,7 +82,12 @@ final class VehicleDamageVisual extends AbstractControl {
                 Part part=new Part(data,geometry,level);parts.add(part);
                 if(name.startsWith("grinder-roller-")){Node roller=new Node(level==0?name:name+"-lod"+level);Vector3f centre=new Vector3f(name.endsWith("left")?-.62f:.62f,.42f,2.78f);roller.setLocalTranslation(centre);geometry.setLocalTranslation(centre.negate());roller.attachChild(geometry);levels[level].attachChild(roller);geometry.setName(name+"-mesh");}else levels[level].attachChild(geometry);
                 if(name.equals("service-core"))geometry.setCullHint(Spatial.CullHint.Always);
-                if(name.equals("paint")||name.equals("glass")||name.startsWith("panel-")){status(assets,part,frostLevels[level],"frost-",new ColorRGBA(.31f,.72f,.93f,.32f));status(assets,part,shieldLevels[level],"shield-",new ColorRGBA(.055f,.48f,1,.14f));}
+                if(name.equals("paint")||name.equals("glass")||name.startsWith("panel-")) {
+                    Material ice=new Material(assets,"materials/VehicleFrost.j3md");ice.setTexture("DamageMap",marks.texture);ice.setFloat("MaxOpacity",.62f);
+                    status(part,frostLevels[level],"frost-",ice);
+                    Material barrier=new Material(assets,"Common/MatDefs/Misc/Unshaded.j3md");barrier.setColor("Color",new ColorRGBA(.055f,.48f,1,.14f));
+                    status(part,shieldLevels[level],"shield-",barrier);
+                }
             }
         }
         for(int wheel=0;wheel<4;wheel++) {
@@ -72,11 +96,14 @@ final class VehicleDamageVisual extends AbstractControl {
                 Mesh[] wheelMeshes=new Mesh[3];for(int level=0;level<3;level++)for(var candidate:model.lods.get(level))if(candidate.name().equals(data.name()))wheelMeshes[level]=candidate.stages()[0];wheelGeometry.add(g);wheelLods.add(wheelMeshes);
             }root.attachChild(axle);
         }
+        BoundingBox silhouette=null;for(Part part:parts)if(part.lod==0){if(silhouette==null)silhouette=(BoundingBox)part.geometry.getMesh().getBound().clone();else silhouette.mergeLocal(part.geometry.getMesh().getBound());}
+        for(int wheel=0;wheel<4;wheel++){Vector3f center=profile.wheelConnection(wheel).add(0,-profile.suspensionRestLength(),0);silhouette.mergeLocal(new BoundingBox(center,profile.wheelRadius(),profile.wheelRadius(),profile.wheelRadius()));}
+        Vector3f center=silhouette.getCenter();for(int i=0;i<8;i++)silhouetteCorners[i]=new Vector3f(center.x+((i&1)==0?-1:1)*silhouette.getXExtent(),center.y+((i&2)==0?-1:1)*silhouette.getYExtent(),center.z+((i&4)==0?-1:1)*silhouette.getZExtent());
         root.attachChild(frost);root.attachChild(shield);effects(false,false);selectLod(0);root.setUserData("damageStage",0);root.setUserData("repairRevision",0L);
     }
-    private static void status(AssetManager assets,Part part,Node parent,String prefix,ColorRGBA color) {
-        Geometry overlay=new Geometry(prefix+part.source.name(),part.geometry.getMesh());Material material=new Material(assets,"Common/MatDefs/Misc/Unshaded.j3md");material.setColor("Color",color);material.getAdditionalRenderState().setBlendMode(RenderState.BlendMode.Alpha);material.getAdditionalRenderState().setDepthWrite(false);material.getAdditionalRenderState().setPolyOffset(-1,-1);
-        overlay.setMaterial(material);overlay.setQueueBucket(RenderQueue.Bucket.Transparent);overlay.setShadowMode(RenderQueue.ShadowMode.Off);overlay.setMorphState(new float[]{1,0});parent.attachChild(overlay);part.overlays.add(overlay);
+    private static void status(Part part,Node parent,String prefix,Material material) {
+        Geometry overlay=new Geometry(prefix+part.source.name(),part.geometry.getMesh());material.getAdditionalRenderState().setBlendMode(RenderState.BlendMode.Alpha);material.getAdditionalRenderState().setDepthWrite(false);material.getAdditionalRenderState().setPolyOffset(-1,-1);
+        overlay.setMaterial(material);overlay.setQueueBucket(RenderQueue.Bucket.Transparent);overlay.setShadowMode(RenderQueue.ShadowMode.Off);if(part.deforms)overlay.setMorphState(part.geometry.getMorphState().clone());parent.attachChild(overlay);part.overlays.add(overlay);
     }
     static int stage(float hp){if(!Float.isFinite(hp))throw new IllegalArgumentException("Finite HP fraction required");return hp<=0?4:hp<=.25f?3:hp<=.5f?2:hp<=.75f?1:0;}
     void configureMaximumHp(float value){if(!Float.isFinite(value)||value<=0)throw new IllegalArgumentException("Positive authoritative maximum HP required");maximumHp=value;}
@@ -92,12 +119,14 @@ final class VehicleDamageVisual extends AbstractControl {
         }
         if(event.type()==GameEvent.Type.DESTROYED){damage(0);return;}
         if(event.type()!=GameEvent.Type.DAMAGE||event.value()<=0||event.vehicleContact()==null)return;
-        Vector3f p=event.vehicleContact().localPoint(),n=event.vehicleContact().localNormal();int region=region(p);float force=Math.clamp(event.value()/80,.06f,.65f);regions[region]=Math.min(1,regions[region]+force);
+        Vector3f p=event.vehicleContact().localPoint(),n=event.vehicleContact().localNormal();int region=region(p);boolean thermal=event.kind().equals("napalm-fire");float force=thermal?Math.clamp(event.value()/40,.012f,.15f):Math.clamp(event.value()/80,.06f,.65f);
+        Anchor anchor=contactAnchor(event);if(anchor!=null)marks.hit(anchor.point,anchor.normal,anchor.uv,force,event.kind().contains("napalm")||event.kind().contains("fire"),anchor.part.source.name().equals("glass"),event.eventId(),anchor.part.source.islandId(),event.kind().equals("machine-gun")?0:event.kind().contains("ram")?4:2);
+        if(thermal)return;
+        regions[region]=Math.min(1,regions[region]+force);
         if(p.z>profile.length()*.3f)lampDamage[p.x<0?0:1]=Math.min(1,lampDamage[p.x<0?0:1]+force);
-        Anchor anchor=anchor(p,n);if(anchor!=null)marks.hit(anchor.point,anchor.normal,anchor.uv,force,event.kind().contains("napalm")||event.kind().contains("fire"),anchor.part.source.name().equals("glass"),event.eventId());
         transition(DAMAGE_SECONDS);
         if(stage>=2&&regions[region]>=.65f){String panel=region==2?PANELS.get(0):region==3?PANELS.get(1):region<2||region==7?PANELS.get(2):region==4||region==5?PANELS.get(3):null;
-            if(panel!=null&&detached.add(panel))for(Part part:parts)if(part.lod==0&&part.source.name().equals(panel)){BoundingBox box=(BoundingBox)part.source.stages()[stage].getBound();pending.add(new VehicleVisual.DetachedPanel(panel,box.getCenter().clone(),new Quaternion(),new Vector3f(box.getXExtent(),box.getYExtent(),box.getZExtent()),n.mult(2.5f).addLocal(0,1.5f,0)));break;}updateDetached();}
+            if(panel!=null&&detached.add(panel))for(Part part:parts)if(part.lod==2&&part.source.name().equals(panel)){Mesh mesh=part.source.stages()[stage];BoundingBox box=(BoundingBox)mesh.getBound();pending.add(new VehicleVisual.DetachedPanel(panel,box.getCenter().clone(),new Quaternion(),new Vector3f(box.getXExtent(),box.getYExtent(),box.getZExtent()),n.mult(2.5f).addLocal(0,1.5f,0),VehicleModelData.centeredPanel(mesh)));break;}updateDetached();}
     }
     private int region(Vector3f p){if(p.y>profile.height()*.68f)return 6;float z=p.z/profile.length();if(z>.24f)return p.x<0?0:1;if(z<-.24f)return p.x<0?4:5;return p.x<0?2:3;}
     private void transition(float seconds) {
@@ -105,41 +134,42 @@ final class VehicleDamageVisual extends AbstractControl {
     }
     private void compose(float seconds) {
         float blend=Math.clamp(elapsed/duration,0,1);elapsed=0;duration=seconds;
-        for(Part part:parts){if(part.lod!=lod)continue;for(int i=0;i<part.from.length;i++)part.from[i]+=(part.to[i]-part.from[i])*blend;FloatBuffer target=part.source.stages()[stage].getFloatBuffer(VertexBuffer.Type.Position);for(int i=0;i<part.to.length;i++)part.to[i]=target.get(i);
-            for(int region=0;region<8;region++)if(regions[region]>0){var d=part.source.regions()[region];for(int j=0;j<d.indices().length;j++)for(int k=0;k<3;k++)part.to[d.indices()[j]*3+k]+=d.xyz()[j*3+k]*regions[region];}
-            for(int i=0;i<part.to.length;i+=3){float x=part.to[i]-part.base[i],y=part.to[i+1]-part.base[i+1],z=part.to[i+2]-part.base[i+2],len=(float)Math.sqrt(x*x+y*y+z*z);if(len>MAX_DENT){float r=MAX_DENT/len;part.to[i]=part.base[i]+x*r;part.to[i+1]=part.base[i+1]+y*r;part.to[i+2]=part.base[i+2]+z*r;}}
-            part.targets();weights(part,0);var m=part.geometry.getMaterial();if(m.getMaterialDef().getMaterialParam("Damage")!=null)m.setFloat("Damage",stage/4f);
+        for(Part part:parts){if(part.lod!=lod)continue;
+            if(part.needsCompose(stage,regions)){part.compose(stage,regions,Math.clamp(part.elapsed/part.duration,0,1));part.elapsed=0;part.duration=seconds;weights(part,0);}
+            var m=part.geometry.getMaterial();if(m.getMaterialDef().getMaterialParam("Damage")!=null)m.setFloat("Damage",stage/4f);
             if(part.source.name().equals("headlights")||part.source.name().equals("taillights")){float[] colors=new float[part.base.length/3*4];for(int v=0;v<colors.length/4;v++){float energy=lampDamage[part.base[v*3]<0?0:1],light=stage==4?.015f:Math.max(.015f,1-energy*1.4f);Arrays.fill(colors,v*4,v*4+3,light);colors[v*4+3]=1;}part.geometry.getMesh().setBuffer(VertexBuffer.Type.Color,4,colors);}
         }
     }
     void advance(float dt,Camera camera) {
         if(!Float.isFinite(dt)||dt<0)throw new IllegalArgumentException("Nonnegative finite presentation dt required");
         if(pendingDuration>=0){float seconds=pendingDuration;pendingDuration=-1;compose(seconds);}marks.flush();
-        if(dt>0){elapsed=Math.min(duration,elapsed+dt);float blend=Math.clamp(elapsed/duration,0,1);for(Part part:parts)if(part.lod==lod)weights(part,blend);mounts.update(dt);}
-        if(camera!=null){float depth=Math.max(camera.getFrustumNear(),root.getWorldTranslation().subtract(camera.getLocation()).dot(camera.getDirection()));float size=Math.max(profile.length(),profile.height());
-            float pixels=size*camera.getFrustumNear()*camera.getHeight()/(Math.max(.001f,camera.getFrustumTop()-camera.getFrustumBottom())*depth);
+        if(dt>0){if(elapsed<duration)elapsed=Math.min(duration,elapsed+dt);for(Part part:parts)if(part.lod==lod&&part.elapsed<part.duration){part.elapsed=Math.min(part.duration,part.elapsed+dt);weights(part,Math.clamp(part.elapsed/part.duration,0,1));}mounts.update(dt);}
+        if(camera!=null){float minimum=Float.POSITIVE_INFINITY,maximum=Float.NEGATIVE_INFINITY;
+            for(Vector3f corner:silhouetteCorners){root.localToWorld(corner,worldCorner);camera.getScreenCoordinates(worldCorner,screenCorner);minimum=Math.min(minimum,screenCorner.y);maximum=Math.max(maximum,screenCorner.y);}
+            float pixels=maximum-minimum;
             int next=lod;if(lod==0&&pixels<180*.85f)next=pixels<60*.85f?2:1;else if(lod==1){if(pixels>180*1.15f)next=0;else if(pixels<60*.85f)next=2;}else if(lod==2&&pixels>60*1.15f)next=pixels>180*1.15f?0:1;
             if(next!=lod)selectLod(next);}
         if(profile.id().equals("grinder"))for(String side:List.of("left","right")){Spatial near=root.getChild("grinder-roller-"+side);for(int level=1;level<3;level++)root.getChild("grinder-roller-"+side+"-lod"+level).setLocalRotation(near.getLocalRotation());}
     }
-    private static void weights(Part part,float blend){float[] w=part.geometry.getMorphState();w[0]=1-blend;w[1]=blend;part.geometry.setMorphState(w);for(Geometry g:part.overlays){g.setMorphState(w.clone());g.setDirtyMorph(true);}}
-    private void selectLod(int value){boolean changed=lod!=value;lod=value;for(int i=0;i<3;i++){var c=i==lod?Spatial.CullHint.Inherit:Spatial.CullHint.Always;levels[i].setCullHint(c);frostLevels[i].setCullHint(c);shieldLevels[i].setCullHint(c);}for(int i=0;i<wheelGeometry.size();i++)wheelGeometry.get(i).setMesh(wheelLods.get(i)[lod]);root.setUserData("vehicleLod",lod);if(changed){compose(DAMAGE_SECONDS);elapsed=duration;for(Part p:parts)if(p.lod==lod)weights(p,1);}}
+    private static void weights(Part part,float blend){if(!part.deforms)return;float[] w=part.geometry.getMorphState();w[0]=1-blend;w[1]=blend;part.geometry.setMorphState(w);for(Geometry g:part.overlays){float[] ow=g.getMorphState();ow[0]=w[0];ow[1]=w[1];g.setMorphState(ow);}}
+    private void selectLod(int value){boolean changed=lod!=value;lod=value;for(int i=0;i<3;i++){var c=i==lod?Spatial.CullHint.Inherit:Spatial.CullHint.Always;levels[i].setCullHint(c);frostLevels[i].setCullHint(c);shieldLevels[i].setCullHint(c);}for(int i=0;i<wheelGeometry.size();i++)wheelGeometry.get(i).setMesh(wheelLods.get(i)[lod]);root.setUserData("vehicleLod",lod);if(changed){compose(DAMAGE_SECONDS);elapsed=duration;for(Part p:parts)if(p.lod==lod){p.elapsed=p.duration;weights(p,1);}}}
     private void updateDetached(){for(Part p:parts)if(PANELS.contains(p.source.name())){var c=detached.contains(p.source.name())?Spatial.CullHint.Always:Spatial.CullHint.Inherit;p.geometry.setCullHint(c);for(Geometry g:p.overlays)g.setCullHint(c);}}
-    void effects(boolean frozen,boolean shielded){frost.setCullHint(frozen&&stage<4?Spatial.CullHint.Inherit:Spatial.CullHint.Always);shield.setCullHint(shielded&&stage<4?Spatial.CullHint.Inherit:Spatial.CullHint.Always);}
+    void effects(boolean frozen,boolean shielded){frost.setCullHint(frozen&&!shielded&&stage<4?Spatial.CullHint.Inherit:Spatial.CullHint.Always);shield.setCullHint(shielded&&stage<4?Spatial.CullHint.Inherit:Spatial.CullHint.Always);}
     List<VehicleVisual.DetachedPanel> drainDetached(){var result=List.copyOf(pending);pending.clear();return result;}
     int markCount(){return marks.count();}float regionDamage(int region){return regions[region];}long repairRevision(){return repairRevision;}
-    void close(){marks.close();parts.clear();pending.clear();seen.clear();detached.clear();mounts.reset();root.detachAllChildren();}
+    void close(){marks.close();parts.clear();pending.clear();seen.clear();contactAnchors.clear();collisionResults.clear();detached.clear();mounts.reset();root.detachAllChildren();}
     GameEvent refineContact(GameEvent event) {
-        if(event.vehicleContact()==null)return event;Anchor a=anchor(event.vehicleContact().localPoint(),event.vehicleContact().localNormal());if(a==null)return event;
+        if(event.vehicleContact()==null)return event;Anchor a=contactAnchor(event);if(a==null)return event;
         ContactSurface surface=a.part.source.name().equals("glass")?ContactSurface.GLASS:a.part.source.name().contains("rubber")?ContactSurface.RUBBER:ContactSurface.METAL;
         return event.withContact(surface,new VehicleContact(a.point,a.normal));
     }
+    private Anchor contactAnchor(GameEvent event){String key=event.eventId()+":"+event.subjectId();Anchor result=contactAnchors.get(key);if(result!=null)return result;result=anchor(event.vehicleContact().localPoint(),event.vehicleContact().localNormal());if(result!=null){contactAnchors.put(key,result);if(contactAnchors.size()>128)contactAnchors.remove(contactAnchors.keySet().iterator().next());}return result;}
     private Anchor anchor(Vector3f point,Vector3f normal) {
         if(normal.lengthSquared()<.01f)return null;Vector3f direction=normal.normalize();float reach=Math.max(1,profile.width());Ray ray=new Ray(point.add(direction.mult(reach)),direction.negate());ray.setLimit(reach*2);
         Part chosen=null;com.jme3.collision.CollisionResult contact=null;float nearest=Float.POSITIVE_INFINITY;
         for(Part part:parts)if(part.lod==0&&!part.source.name().startsWith("mount-")&&!part.source.name().startsWith("grinder-")&&!detached.contains(part.source.name())) {
-            Geometry canonical=new Geometry(part.source.name(),part.source.stages()[0]);canonical.updateGeometricState();CollisionResults results=new CollisionResults();canonical.collideWith(ray,results);
-            for(var candidate:results){float distance=candidate.getContactPoint().distanceSquared(point);if(distance<nearest&&candidate.getContactNormal().dot(direction)>.05f){nearest=distance;chosen=part;contact=candidate;}}
+            collisionResults.clear();part.canonical.collideWith(ray,collisionResults);
+            for(var candidate:collisionResults){float distance=candidate.getContactPoint().distanceSquared(point);if(distance<nearest&&candidate.getContactNormal().dot(direction)>.05f){nearest=distance;chosen=part;contact=candidate;}}
         }
         if(chosen==null)return null;int triangle=contact.getTriangleIndex();Vector3f a=new Vector3f(),b=new Vector3f(),c=new Vector3f();chosen.source.stages()[0].getTriangle(triangle,a,b,c);Vector3f p=contact.getContactPoint(),v0=b.subtract(a),v1=c.subtract(a),v2=p.subtract(a);
         float d00=v0.dot(v0),d01=v0.dot(v1),d11=v1.dot(v1),d20=v2.dot(v0),d21=v2.dot(v1),den=d00*d11-d01*d01;if(Math.abs(den)<1e-10)return null;
@@ -148,7 +178,16 @@ final class VehicleDamageVisual extends AbstractControl {
         return new Anchor(chosen,triangle,wa,wb,wc,p.clone(),contact.getContactNormal().clone(),uv);
     }
     private static float[] positions(Mesh mesh){var b=mesh.getFloatBuffer(VertexBuffer.Type.Position);float[] p=new float[b.limit()];for(int i=0;i<p.length;i++)p[i]=b.get(i);return p;}
-    private static float[] normals(float[] p){float[] out=new float[p.length];for(int i=0;i<p.length;i+=9){Vector3f a=new Vector3f(p[i],p[i+1],p[i+2]),b=new Vector3f(p[i+3],p[i+4],p[i+5]),c=new Vector3f(p[i+6],p[i+7],p[i+8]);Vector3f n=b.subtractLocal(a).crossLocal(c.subtractLocal(a)).normalizeLocal();for(int k=0;k<3;k++){out[i+k*3]=n.x;out[i+k*3+1]=n.y;out[i+k*3+2]=n.z;}}return out;}
+    private static float[] read3(Mesh mesh,VertexBuffer.Type type){float[] result=new float[mesh.getVertexCount()*3];copy3(mesh,type,result);return result;}
+    private static void copy3(Mesh mesh,VertexBuffer.Type type,float[] out){FloatBuffer source=mesh.getFloatBuffer(type);int stride=type==VertexBuffer.Type.Tangent?4:3;for(int v=0;v<out.length/3;v++)for(int k=0;k<3;k++)out[v*3+k]=source.get(v*stride+k);}
+    private static void basis(float[] p,FloatBuffer uv,int triangle,float[] normal,float[] tangent) {
+        int i=triangle*9,u=triangle*6;float x1=p[i+3]-p[i],y1=p[i+4]-p[i+1],z1=p[i+5]-p[i+2],x2=p[i+6]-p[i],y2=p[i+7]-p[i+1],z2=p[i+8]-p[i+2];
+        float nx=y1*z2-z1*y2,ny=z1*x2-x1*z2,nz=x1*y2-y1*x2;float length=(float)Math.sqrt(nx*nx+ny*ny+nz*nz);if(length<1e-8f)return;nx/=length;ny/=length;nz/=length;
+        float du1=uv.get(u+2)-uv.get(u),dv1=uv.get(u+3)-uv.get(u+1),du2=uv.get(u+4)-uv.get(u),dv2=uv.get(u+5)-uv.get(u+1),den=du1*dv2-du2*dv1;
+        float tx=tangent[i],ty=tangent[i+1],tz=tangent[i+2];if(Math.abs(den)>1e-8f){tx=(x1*dv2-x2*dv1)/den;ty=(y1*dv2-y2*dv1)/den;tz=(z1*dv2-z2*dv1)/den;}
+        float dot=tx*nx+ty*ny+tz*nz;tx-=nx*dot;ty-=ny*dot;tz-=nz*dot;length=(float)Math.sqrt(tx*tx+ty*ty+tz*tz);if(length>1e-8f){tx/=length;ty/=length;tz/=length;}
+        for(int k=0;k<3;k++){normal[i+k*3]=nx;normal[i+k*3+1]=ny;normal[i+k*3+2]=nz;tangent[i+k*3]=tx;tangent[i+k*3+1]=ty;tangent[i+k*3+2]=tz;}
+    }
     @Override protected void controlUpdate(float dt){}
     @Override protected void controlRender(RenderManager manager,ViewPort viewport){}
 }
